Agregue un titulo huguito

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
     <head></head>
     <body>
         <h2>ESTA ES MI PRIMER PAGINA  WEB</h2>
-        <p>HOLA SIY UN PARRAFITO</p>
+        <p>HOLA SIY UN TITULO DE HUGUITO</h3>
     </body>
 </html>
